--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -240,7 +240,6 @@
            </div>
          </div>
 
-
         </div>
       </div>
 
@@ -256,6 +255,25 @@
       <hr>
       <div class="panel-collapse collapse in" id="demo">
 
+            <!-- Fila para los contactos en Copia -->
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-9">
+                <strong>Contactos a copiar:</strong>
+               <ng2-completer inputClass="form-control"  fieldTabindex="true" name="idContactoSreci"
+                   [(ngModel)]="searchStrFunc" inputId="2" clearSelected="true"
+                   [datasource]="dataServiceFunc" [minSearchLength]="2" textSearching="Buscando Contacto ..."
+                   textNoResults="No se han encontrado nada ..."
+                   placeholder="Selecciona un Funcionario de contacto" (selected)="onSelectedFunc($event)" >
+               </ng2-completer>
+
+               <textarea #observaciones="ngModel" class="form-control" id="setTomail" name="setTomail" rows="3"
+                   tabindex="3" disabled="true"
+                   ngControl="setTomail" [(ngModel)]="comunicacion.setTomail">{{selectedFuncionarioAll}}</textarea>
+                <!-- <p><strong>Copia a:</strong> {{selectedFuncionarioAll}}</p> -->
+              </div>
+            </div>
+
+            <hr>
             <div class="row">
 
             <!-- Observaciones de la Ingreso de Comunicacion -->
@@ -269,16 +287,17 @@
               </div>
             </div>
 
+
             <!-- Subir PDF del Oficio entrante -->
             <div class="col-xs-12 col-sm-6 col-md-12">
               <div class="form-group" id="fileIn">
                   <div id="contFile">
-                    <label for="exampleInputFile">Agregar Pdf</label>
+                    <label for="exampleInputFile">Agregar Documentos</label>
                     <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento[]"
                          ngControl="pdfDocumento" [(ngModel)]="comunicacion.pdfDocumento"  placeholder="Subir Pdf ..."
                          aria-describedby="fileHelp" (change)="fileChangeEvent($event)">
 
-                     <small  id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf desde su equipo local y asiganarlo al Oficio.</small>
+                     <small  id="fileHelp" class="form-text text-muted">Esta seccion sirve, para ingresar un pdf, imagen etc desde su equipo local y asiganarlo a la comunicacion.</small>
                   </div>
 
                 </div>
@@ -309,7 +328,6 @@
                       <!-- Cuerpor de la Tabla  -->
                   </tbody>
                 </table>
-
 
                 <!-- <button type="button" name="button" (click)="createNewFileInput()">Agregar Nuevo</button>
                 <button type="button" name="button" (click)="removeFileInput()">Borrar</button>'
