--- a/symfony/app/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMail.html.twig
@@ -122,7 +122,11 @@
                     <td>Fecha Creacion</td>
                     <td>{{ fechaIngresoCom }}</td>                    
                   </tr>
-                
+                  <tr class="modo1">
+                    <th scope="row">7</th>
+                    <td>Observaciones / Instrucciones</td>
+                    <td>{{ obsComunicacion }}</td>                    
+                  </tr>
             </table>
 
             <br>
