--- a/symfony/app/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMail.html.twig
@@ -127,6 +127,11 @@
                     <td>Observaciones / Instrucciones</td>
                     <td>{{ obsComunicacion }}</td>                    
                   </tr>
+                  <tr class="modo1">
+                    <th scope="row">8</th>
+                    <td>Institucion</td>
+                    <td>{{ institucionCom }}</td>                    
+                  </tr>
             </table>
 
             <br>
