--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -180,7 +180,7 @@
           </div>
         </div>
 
-        <!-- <input type="button" name="" value="Li" (click)="download()"> -->
+        <!-- <input type="button" name="" value="Recarga" (click)="recargaTable()"> -->
         <input type="submit" value="Generar Reporte" class="btn btn-primary btn-lg"
           [disabled]="!reporteForm.valid" >
 
@@ -210,7 +210,7 @@
             <th>Estado Comunicacion</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="newTable" >
           <tr *ngFor="let item of JsonOutgetReporteComunicaion">
             <th scope="row">{{ item.idTipoDocumento.descTipoDocumento }}</th>
             <td>{{ item.idDeptoFuncional.descDeptoFuncional }}</td>
