--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -267,7 +267,7 @@
                </ng2-completer>
 
                <textarea #observaciones="ngModel" class="form-control" id="setTomail" name="setTomail" rows="3"
-                   tabindex="3" disabled="true"
+                   tabindex="3"
                    ngControl="setTomail" [(ngModel)]="comunicacion.setTomail">{{selectedFuncionarioAll}}</textarea>
                 <!-- <p><strong>Copia a:</strong> {{selectedFuncionarioAll}}</p> -->
               </div>
