--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -148,7 +148,7 @@
                   <td >{{ item.idTipoDocumento.descTipoDocumento }}</td>
                   <td >{{ item.fechaIngreso.timestamp | generateDate  }}</td>
                   <td >{{ item.fechaMaxEntrega.timestamp | generateDate }}</td>
-                  <td >{{ item.idInstitucion.descInstitucion }}</td>
+                  <td >{{ item.idInstitucion.descInstitucion }} | {{ item.idInstitucion.perfilInstitucion }} </td>
                   <td >{{ item.descCorrespondenciaEnc }}</td>
                   <td >{{ item.temaComunicacion }}</td>
                   <td style="width:10px"> <a style="cursor: pointer;" class="nav-link">
