--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -4,12 +4,13 @@
   <hr class="colorgraph">
 
   <!-- Loader de Carga de los Datos -->
-  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:35%; margin-top:5%;">
-    <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
+    <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+    <img src="assets/images/832.gif" alt="Cargando Tareas">
   </div>
 
   <!-- Fila para el Area de Busqueda de los Oficios -->
-  <div class="row-fluid" *ngIf="loadTabla1 == true">
+  <!-- <div class="row-fluid" *ngIf="loadTabla1 == true">
     <div class="col-xs-12 col-md-12 col-lg-12">
     <h4>Buscar por:
     <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema |
@@ -19,7 +20,7 @@
     </h4>
       <input class="form-control" type="text" name="search"  [(ngModel)]="search" placeholder="Buscar" >
     </div>
-  </div>
+  </div> -->
 
   <hr>
 
