--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -4,8 +4,9 @@
   <hr class="colorgraph">
 
   <!-- Loader de Carga de los Datos -->
-  <div id="loader-2" *ngIf="loading == 'show'">
-    <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:35%; margin-top:2%; margin-bottom:2%;">
+    <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+    <img src="assets/images/745.gif" alt="Cargando Tareas">
   </div>
 
   <div class="row">
@@ -285,8 +286,9 @@
             <!-- Fila de Actividades de la Comunicacion -->
             <div class="row">
               <!-- Loader de Carga de los Datos -->
-              <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:40%; margin-top:100px;" >
-                <img src="assets/images/30.gif" alt="Cargando Tareas" >
+              <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:40%;" >
+                <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
+                <img src="assets/images/832.gif" alt="Cargando Tareas" >
               </div>
               <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%"
                   *ngIf="loadTabla2 == true">
@@ -323,8 +325,9 @@
               <br>
               <div class="row">
                 <!-- Loader de Carga de los Datos -->
-                <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:40%; margin-top:100px;" >
-                  <img src="assets/images/30.gif" alt="Cargando Tareas" >
+                <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:40%;" >
+                  <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
+                  <img src="assets/images/832.gif" alt="Cargando Tareas" >
                 </div>
 
                 <table class="table table-striped" cellspacing="0" width="100%"
