--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -117,8 +117,9 @@
       </div>
 
       <!-- Loader de Carga de los Datos -->
-      <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:35%; margin-top:5%;">
-        <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+      <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
+        <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+        <img src="assets/images/832.gif" alt="Cargando Tareas">
       </div>
 
             <table id="example" class="table table-striped table-bordered"
@@ -203,8 +204,9 @@
                     <h4>Seguimiento</h4>
                     <div class="table table-striped table-bordered" style="height: 300px; overflow: auto">
                       <!-- Loader de Carga de los Datos -->
-                      <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:300px; margin-top:100px;" >
-                        <img src="assets/images/30.gif" alt="Cargando Tareas" >
+                      <div id="loader-2" *ngIf="loading_table == 'show'" style="margin-left:45%; margin-top:10%;" >
+                        <!-- <img src="assets/images/30.gif" alt="Cargando Tareas" > -->
+                        <img src="assets/images/832.gif" alt="Cargando Tareas" >
                       </div>
                       <table class="example" class="table table-striped table-bordered" style="font-size:15px" *ngIf="loadTabla2 == true">
                         <thead>
