--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -2,8 +2,8 @@
 <!-- Template de Login -->
 <div class="container animated fadeIn fast " style="margin-top:20px, margin-left:300px">
   <!-- Loader de Carga de los Datos -->
-  <div id="loader-2" *ngIf="loading == 'show'">
-    <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:10%; margin-top:2%; margin-bottom:2%">
+    <img src="assets/images/745.gif" alt="Cargando Tareas">
   </div>
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 col-sm-offset-2 col-md-offset-3">
@@ -45,4 +45,27 @@
 	</div>
 </div>
 
+</div>
+
+<button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Launch demo modal</button>
+
+<div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true" style="width:250px; height:250px; margin-left:50%; margin-top:10%" >
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Espera ...</h4>
+      </div>
+      <div class="modal-body">
+        <!-- Loader de Carga de los Datos -->
+        <div id="loader-2"  style="margin-left:50px">
+          <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
