--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -4,11 +4,12 @@
   <hr class="colorgraph">
 
   <!-- Loader de Carga de los Datos -->
-  <div id="loader-2" *ngIf="loading == 'show'">
-    <img src="assets/images/aguarde.gif" alt="Cargando Tareas">
+  <div id="loader-2" *ngIf="loading == 'show'" style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
+    <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+    <img src="assets/images/832.gif" alt="Cargando Tareas">
   </div>
   <!-- Fila para el Area de Busqueda de los Oficios -->
-  <div class="row-fluid">
+  <div class="row-fluid" *ngIf=" loadTabla1 == true">
     <div class="col-xs-12 col-md-12 col-lg-12">
     <h4>Buscar por:
       <input type="radio" name="codCorr" [(ngModel)]="codCorr" value="temaComunicacion" >Tema de Oficio |
@@ -28,7 +29,7 @@
 
   <hr>
 
-  <div class="col-xs-12 col-md-12 col-lg-12">
+  <div class="col-xs-12 col-md-12 col-lg-12" *ngIf=" loadTabla1 == true">
     <table id="example" class="table table-striped table-bordered" cellspacing="0"  >
         <thead >
             <tr>
@@ -85,7 +86,7 @@
 
    <div class="clearfix"></div>
 
-  <ul class="pagination">
+  <ul class="pagination" *ngIf=" loadTabla1 == true">
     <!-- Boton de Previous -->
     <li>
        <a  [routerLink]="['/agregar-actividad', pagePrev]" aria-label="Previous" >
