--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -47,7 +47,7 @@
 
 </div>
 
-<button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Launch demo modal</button>
+<!-- <button class="btn btn-primary" data-toggle="modal" data-target="#myModal2">Launch demo modal</button> -->
 
 <div id="myModal2" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true" style="width:250px; height:250px; margin-left:50%; margin-top:10%" >
