--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -122,6 +122,11 @@
                     <td>Fecha Creacion</td>
                     <td>{{ fechaMaxOfi }}</td>                    
                   </tr>
+                  <tr class="modo1">
+                    <th scope="row">7</th>
+                    <td>Activiad</td>
+                    <td>{{ actividadCom }}</td>                    
+                  </tr>
                 
             </table>
 
