--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <!-- Titulo y Barra separadora -->
   <h2> {{ titulo }} <small> | SICDOC.</small></h2>
@@ -223,10 +224,12 @@
       <!-- Tabla del Reporte -->
       <h4 id="editor" >Resumen de la Informacion Solicitada</h4>
       <hr>
-      <table class="table table-striped table-hover table-responsive" cellspacing="0" width="100%" id="example">
+      <table class="table table-striped table-hover table-responsive" cellspacing="0" id="example">
         <thead>
           <tr>
+            <th>Ingreso / Salida</th>
             <th>Tipo de Comunicacion</th>
+            <!-- <th>Codigo / Comunicacion</th> -->
             <th>Direccion Responsable</th>
             <th>Funcionario Responsable</th>
             <th>Fecha Ingreso </th>
@@ -238,7 +241,9 @@
         </thead>
         <tbody id="newTable" >
           <tr *ngFor="let item of JsonOutgetReporteComunicaion">
+            <th scope="row">{{ item.idTipoComunicacion.descTipoComunicacion }}</th>
             <th scope="row">{{ item.idTipoDocumento.descTipoDocumento }}</th>
+            <!-- <td>{{ item.codCorrespondenciaEnc }}</td> -->
             <td>{{ item.idDeptoFuncional.descDeptoFuncional }}</td>
             <td>{{ item.idFuncionarioAsignado.nombre1Funcionario }} - {{ item.idFuncionarioAsignado.apellido1Funcionario }}</td>
             <td>{{ item.fechaIngreso.timestamp | generateDate }}</td>
@@ -249,6 +254,27 @@
           </tr>
         </tbody>
       </table>
+
+      <button class="btn btn-primary" data-toggle="modal" data-target="#reportModal">Launch demo modal</button>
+
+      <div id="reportModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              ...
+            </div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
